RESOLVED FIXED157560
Touch.prototype is undefined on iOS
https://bugs.webkit.org/show_bug.cgi?id=157560
Summary Touch.prototype is undefined on iOS
Ryosuke Niwa
Reported 2016-05-10 22:14:17 PDT
Refactor DOMWindow.idl and DOMWindowCustom.cpp in order to fix a bug that Touch.prototype is undefined. <rdar://problem/26143008>
Attachments
Refactors code to fix the bug (7.07 KB, patch)
2016-05-10 22:18 PDT, Ryosuke Niwa
no flags
Updated for ToT (7.06 KB, patch)
2016-05-10 22:39 PDT, Ryosuke Niwa
no flags
Fixed typos (7.06 KB, patch)
2016-05-10 22:56 PDT, Ryosuke Niwa
no flags
Removes the attributes (2.52 KB, patch)
2016-05-10 23:09 PDT, Ryosuke Niwa
cdumez: review+
Ryosuke Niwa
Comment 1 2016-05-10 22:18:39 PDT
Created attachment 278586 [details] Refactors code to fix the bug
Ryosuke Niwa
Comment 2 2016-05-10 22:39:21 PDT
Created attachment 278589 [details] Updated for ToT
Chris Dumez
Comment 3 2016-05-10 22:43:10 PDT
Comment on attachment 278589 [details] Updated for ToT View in context: https://bugs.webkit.org/attachment.cgi?id=278589&action=review > Source/WebCore/bindings/js/JSDOMWindowCustom.cpp:154 > +#if ENABLE(IOS_TOUCH_EVENTS) I don't think we want to add any properties in this function. Why aren't those properties added automatically if the corresponding interfaces are not marked as [NoInterfaceObject]? > Source/WebCore/bindings/js/JSDOMWindowCustom.cpp:280 > + if (propertyName == exec->propertyNames().touch || propertyName == exec->propertyNames().touchList) I don't think we want any more special handling in this function.
Chris Dumez
Comment 4 2016-05-10 22:44:06 PDT
Comment on attachment 278589 [details] Updated for ToT View in context: https://bugs.webkit.org/attachment.cgi?id=278589&action=review > Source/JavaScriptCore/runtime/CommonIdentifiers.h:248 > + macro(touch) \ Why do these start with a lowercase?
Ryosuke Niwa
Comment 5 2016-05-10 22:56:03 PDT
Created attachment 278590 [details] Fixed typos
Ryosuke Niwa
Comment 6 2016-05-10 23:09:28 PDT
Created attachment 278592 [details] Removes the attributes
Chris Dumez
Comment 7 2016-05-10 23:12:01 PDT
Comment on attachment 278592 [details] Removes the attributes View in context: https://bugs.webkit.org/attachment.cgi?id=278592&action=review r=me but please coordinate this when landing. > Source/WebCore/ChangeLog:5 > + Missing radar number?
Ryosuke Niwa
Comment 8 2016-05-11 13:08:47 PDT
WebKit Commit Bot
Comment 9 2016-05-11 17:29:19 PDT
Re-opened since this is blocked by bug 157601
Ryosuke Niwa
Comment 10 2016-05-12 12:53:59 PDT
Note You need to log in before you can comment on or make changes to this bug.