Touch.prototype is undefined on iOS https://bugs.webkit.org/show_bug.cgi?id=157560 <rdar://problem/26143008>

Reviewed by Chris Dumez.

Remove Touch and TouchList attributes from DOMWindow.
These attributes should be exposed via generated binding code (JSDOMWindow.cpp).

* bindings/js/JSDOMWindowCustom.cpp:
(WebCore::JSDOMWindow::touch): Deleted.
(WebCore::JSDOMWindow::touchList): Deleted.
* page/DOMWindow.idl:


Canonical link: https://commits.webkit.org/175718@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200700 268f45cc-cd09-0410-ab3c-d52691b4dbfc